--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,12 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Ignore Visual Studio files
+.vs/
+*.suo
+*.user
+bin/
+obj/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Ignore node_modules (if present)
+node_modules/
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Ignore build output (if you build locally)
+build/
